[gd_scene load_steps=10 format=2]

[ext_resource path="res://intro/picture/spellbook/module/Class.png" type="Texture" id=1]
[ext_resource path="res://intro/picture/spellbook/module/class_object.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://intro/script/class_spellbookinfo.gd" type="Script" id=4]
[ext_resource path="res://intro/picture/spellbook/Untitled.png" type="Texture" id=7]
[ext_resource path="res://intro/picture/close.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 3 )

[node name="class_info" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_left = 6.0
margin_top = 67.0
margin_right = 106.0
margin_bottom = 124.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
margin_right = 100.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Create_class" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 15.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Creating class"

[node name="create_object" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Create Object"

[node name="Control2" type="Control" parent="."]
margin_left = 113.0
margin_top = 35.0
margin_right = 312.0
margin_bottom = 162.0

[node name="class" type="PanelContainer" parent="Control2"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -5.0
margin_top = -3.0

[node name="code1" type="VBoxContainer" parent="Control2/class"]
margin_left = 7.0
margin_top = 7.0
margin_right = 206.0
margin_bottom = 129.0

[node name="image_code" type="TextureRect" parent="Control2/class/code1"]
margin_right = 199.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="space" type="Control" parent="Control2/class/code1"]
margin_top = 82.0
margin_right = 199.0
margin_bottom = 82.0

[node name="title" type="Label" parent="Control2/class/code1"]
margin_top = 86.0
margin_right = 199.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Creating a class"
align = 1
valign = 1
autowrap = true

[node name="space3" type="Control" parent="Control2/class/code1"]
margin_top = 99.0
margin_right = 199.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="Control2/class/code1"]
margin_top = 103.0
margin_right = 199.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "A class is the core of any modern Object Oriented Programming language such as C sharp. "
align = 1
valign = 1
autowrap = true

[node name="object" type="PanelContainer" parent="Control2"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -5.0
margin_top = -3.0

[node name="code3" type="VBoxContainer" parent="Control2/object"]
margin_left = 7.0
margin_top = 7.0
margin_right = 206.0
margin_bottom = 140.0

[node name="image_code" type="TextureRect" parent="Control2/object/code3"]
margin_right = 199.0
margin_bottom = 78.0
texture = ExtResource( 2 )

[node name="space" type="Control" parent="Control2/object/code3"]
margin_top = 82.0
margin_right = 199.0
margin_bottom = 82.0

[node name="title" type="Label" parent="Control2/object/code3"]
margin_top = 86.0
margin_right = 199.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Creating object using class"
align = 1
valign = 1
autowrap = true

[node name="Label" type="Label" parent="Control2/object/code3"]
margin_top = 99.0
margin_right = 199.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 3 )
text = "Objects are the basic run-time entities of an object oriented system. They may represent a person, a place or any item that the program must handle. "
align = 1
valign = 1
autowrap = true

[node name="space5" type="Control" parent="Control2/object/code3"]
margin_top = 133.0
margin_right = 199.0
margin_bottom = 133.0

[node name="close" type="TextureButton" parent="."]
margin_left = 297.0
margin_top = 6.0
margin_right = 310.0
margin_bottom = 16.0
texture_normal = ExtResource( 8 )

[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/Create_class" to="." method="_on_Create_class_pressed"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/create_object" to="." method="_on_create_object_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
